10/10/25 Hide overflow on navbar to prevent wrapping when window is too narrow.

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,8 +1,12 @@
 /* Top of Page Navbar */
 div#navbar {
     height:5dvh;
+    
+    background: rgba(0,0,0,0);
+
     text-align:center;
-    background: rgba(0,0,0,0);;
+
+    overflow: hidden;
 }
 
 ul {
